@@ -20,7 +20,7 @@ sub parse {
     while (my ($name, $value) = splice @$pairs, 0, 2) {
       next unless $ATTRS{my $attr = lc $name};
       $value =~ s/^\.// if $attr eq 'domain';
-      $value = Mojo::Date->new($value)->epoch if $attr eq 'expires';
+      $value = Mojo::Date->new($value // '')->epoch if $attr eq 'expires';
       $value = 1 if $attr eq 'secure' || $attr eq 'httponly';
       $cookies[-1]{$attr eq 'max-age' ? 'max_age' : $attr} = $value;
     }
